--- a/config/public-nginx.conf
+++ b/config/public-nginx.conf
@@ -4,36 +4,18 @@ events {
 }
 
 http {
-  server {
-    listen 80 default_server;
-    server_name _;
-
-    location / {
-      return 301 https://$host$request_uri;
-    }
-
-    location /.well-known/acme-challenge/ {
-      root /var/www/certbot;
-    }
-  }
+  # Add your apps here
 
   server {
-    listen 443 ssl default_server;
-    server_name _;
-
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
-
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    listen 80;
+    server_name qa.track.bcc3d.ca;
 
     proxy_set_header X-Forwarded-Host $host:$server_port;
     proxy_set_header X-Forwarded-Server $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto https;
 
     location / {
-      proxy_pass  http://proxy-nginx;
+      proxy_pass http://op-proxy;
     }
   }
 }
