--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-./data/
+# IntelliJ project files
 **/.idea/
+
+# Local data mounts for docker containers
+./data/
+
+# Output of templating engine
+./build/
