--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -18,6 +18,13 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    command: "certonly --webroot -w /var/www/certbot --email admin@bcc3d.ca --agree-tos --no-eff-email -d track.bcc3d.ca -d qa.track.bcc3d.ca"
+    command: >
+      certonly
+        --webroot
+        -w /var/www/certbot
+        --email admin@bcc3d.ca
+        --agree-tos
+        --no-eff-email
+        -d track.bcc3d.ca -d qa.track.bcc3d.ca
     depends_on:
       - nginx
