--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -24,12 +24,7 @@ http {
     ssl_certificate /etc/letsencrypt/live/track.bcc3d.ca/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/track.bcc3d.ca/privkey.pem;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    proxy_set_header X-Forwarded-Host $host:$server_port;
-    proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    include nginx-include.conf;
 
     location / {
       proxy_pass http://localhost:8080;
@@ -43,15 +38,10 @@ http {
     ssl_certificate /etc/letsencrypt/live/qa.track.bcc3d.ca/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/qa.track.bcc3d.ca/privkey.pem;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    proxy_set_header X-Forwarded-Host $host:$server_port;
-    proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    include nginx-include.conf;
 
     location / {
-      proxy_pass http://localhost:19000;
+      proxy_pass http://localhost:42310;
     }
   }
 }
