--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     ports:
       - "{{ proxyPort }}:80"
     volumes:
-      - ./config/apps-nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./config/apps-nginx.conf:/etc/nginx/nginx.conf
+      - ./config/apps-nginx-include.conf:/etc/nginx/nginx-include.conf
     networks:
       - openproject
     depends_on:
