--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx-include.conf:/etc/nginx/nginx-include.conf
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
 
@@ -26,5 +27,3 @@ services:
         --agree-tos
         --no-eff-email
         -d track.bcc3d.ca -d qa.track.bcc3d.ca
-    depends_on:
-      - nginx
