--- a/apps/ssl/nginx-include.conf
+++ b/apps/ssl/nginx-include.conf
@@ -1,3 +1,6 @@
+ssl_certificate /etc/letsencrypt/live/track.bcc3d.ca/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/track.bcc3d.ca/privkey.pem;
+
 ssl_session_cache shared:le_nginx_SSL:10m;
 ssl_session_timeout 1440m;
 ssl_session_tickets off;
