--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -5,14 +5,12 @@ version: "3.7"
 services:
   nginx:
     image: nginx:1.17
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./nginx-include.conf:/etc/nginx/nginx-include.conf
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    network_mode: host
 
   certbot:
     image: certbot/certbot
@@ -28,3 +26,4 @@ services:
         --agree-tos
         --no-eff-email
         -d track.bcc3d.ca -d qa.track.bcc3d.ca
+    network_mode: host
