--- a/templates/config/apps-nginx-include.conf
+++ b/templates/config/apps-nginx-include.conf
@@ -1,3 +1,2 @@
-proxy_set_header X-Forwarded-Proto $scheme;
-proxy_set_header X-Forwarded-Host $host;
-proxy_set_header X-Forwarded-Port $server_port;
+proxy_set_header X-Forwarded-Proto https;
+proxy_set_header X-Forwarded-Host $host:$server_port;
