--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -11,7 +11,7 @@ http {
     listen 80;
     server_name {{ hostname }};
 
-    include nginx-include.conf
+    include apps-nginx-include.conf;
 
     location / {
       proxy_pass http://op-proxy;
