--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     volumes:
       - "op-pg-data:/var/lib/postgresql/data"
       # For dumping DB state to
-      - "./share/op-db:/share"
+      - "./data/op-db:/data"
     environment:
       - POSTGRES_PASSWORD=p4ssw0rd
       - POSTGRES_DB=openproject
