--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -14,7 +14,7 @@ http {
     include apps-nginx-include.conf;
 
     location / {
-      proxy_pass http://op-proxy;
+      proxy_pass http://op-web:80;
     }
   }
 }
