fix build context

--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   ## App that does workflow automation for OpenProject
   workpackage-manager:
-    build: "."
+    build: ../apps/workpackage-manager/.
     volumes:
       - "./config/api_key.txt:/app/api_key.txt"
       - "./config/workpackage-manager.yml:/app/config.yml"
