--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   ## App that does workflow automation for OpenProject
   workpackage-manager:
-    build: ../apps/workpackage-manager/.
+    build: ./apps/workpackage-manager/.
     expose:
       - 80
     volumes:
@@ -59,7 +59,7 @@ services:
     volumes:
       - "op-pg-data:/var/lib/postgresql/data"
       # For dumping DB state to
-      - "../data/op-db:/data"
+      - "./data/op-db:/data"
     environment:
       - POSTGRES_PASSWORD=p4ssw0rd
       - POSTGRES_DB=openproject
