--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -9,12 +9,23 @@ http {
 
   server {
     listen 80;
-    server_name {{ hostname }};
+    server_name {{ apps.openproject.hostname }};
 
     include apps-nginx-include.conf;
 
     location / {
       proxy_pass http://op-web:8080;
+    }
+  }
+
+  server {
+    listen 80;
+    server_name {{ apps.bcc3d_ca.hostname }};
+
+    include apps-nginx-include.conf;
+
+    location / {
+      root /var/www/bcc3d.ca;
     }
   }
 }
