--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -30,7 +30,7 @@ http {
 
   server {
     listen 443 ssl;
-    server_name qa.track.bcc3d.ca;
+    server_name qa.track.bcc3d.ca www.track.bcc3d.ca;
 
     include nginx-include.conf;
 
