--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -25,5 +25,7 @@ services:
         --email admin@bcc3d.ca
         --agree-tos
         --no-eff-email
-        -d track.bcc3d.ca -d qa.track.bcc3d.ca
+        -d track.bcc3d.ca
+        -d qa.track.bcc3d.ca
+        -d www.track.bcc3d.ca
     network_mode: host
