--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -30,7 +30,18 @@ http {
 
   server {
     listen 443 ssl;
-    server_name qa.track.bcc3d.ca www.track.bcc3d.ca;
+    server_name qa.track.bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      proxy_pass http://localhost:42310;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name www.track.bcc3d.ca;
 
     include nginx-include.conf;
 
