Routing is done with the Host header, duh

--- a/apps/ssl/nginx-include.conf
+++ b/apps/ssl/nginx-include.conf
@@ -13,3 +13,4 @@ ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECD
 proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto  https;
 proxy_set_header X-Forwarded-Host   $server_name;
+proxy_set_header Host               $server_name;
