--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -30,4 +30,16 @@ http {
       root /var/www/bcc3d.ca;
     }
   }
+
+  server {
+    listen 80;
+    server_name {{ apps.wpm.hostname }};
+
+    include apps-nginx-include.conf;
+
+    # For security, only expose the endpoint we need
+    location /hcp/submit {
+      proxy_pass http://workpackage-manager;
+    }
+  }
 }
