Added CORS support

--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -21,6 +21,7 @@ http {
 
     location /hcp/submit {
       proxy_pass http://workpackage-manager;
+      include apps-nginx-cors.conf;
     }
   }
 
