--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./config/apps-nginx.conf:/etc/nginx/nginx.conf
       - ./config/apps-nginx-include.conf:/etc/nginx/apps-nginx-include.conf
+      - ./config/apps-nginx-cors.conf:/etc/nginx/apps-nginx-cors.conf
       - ./apps/bcc3d.ca/_site:/var/www/bcc3d.ca
     networks:
       - apps
