--- a/apps/bcc3d.ca/_data/cards.yml
+++ b/apps/bcc3d.ca/_data/cards.yml
@@ -6,7 +6,7 @@
     subject to <b>item availability</b>, <b>facility type</b>, and <b>urgency of need</b>. Find
     out more by following the link below.
   cta: Request Equipment
-  url: /order/
+  url: /request/
 
 - title: Volunteers
   img: /assets/img/face-shield-print.gif
