Fix address submit bug

--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - apps
     depends_on:
       - op-web
+      - workpackage-manager
 
   ## App that does workflow automation for OpenProject
   workpackage-manager:
