--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -18,42 +18,6 @@ http {
     location / {
       proxy_pass http://op-web:8080;
     }
-
-    location /hcp/submit {
-
-      if ($request_method = 'OPTIONS') {
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-          #
-          # Custom headers and headers various browsers *should* be OK with but aren't
-          #
-          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-          #
-          # Tell client that this pre-flight info is valid for 20 days
-          #
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Content-Type' 'text/plain; charset=utf-8';
-          add_header 'Content-Length' 0;
-          return 204;
-      }
-      if ($request_method = 'POST') {
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-          add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-      }
-      if ($request_method = 'GET') {
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-          add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-      }
-
-      proxy_pass http://workpackage-manager;
-      # include apps-nginx-cors.conf;
-
-
-    }
   }
 
   server {
@@ -64,6 +28,10 @@ http {
 
     location / {
       root /var/www/bcc3d.ca;
+    }
+
+    location /api/ {
+      proxy_pass http://workpackage-manager/;
     }
   }
 }
