Updated SSL termination config for go-live

--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -19,7 +19,7 @@ http {
 
   server {
     listen 443 ssl;
-    server_name track.bcc3d.ca;
+    server_name *.bcc3d.ca;
 
     include nginx-include.conf;
 
@@ -30,7 +30,18 @@ http {
 
   server {
     listen 443 ssl;
-    server_name qa.track.bcc3d.ca;
+    server_name bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      return 302 https://www.bcc3d.ca;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name *.qa.bcc3d.ca;
 
     include nginx-include.conf;
 
@@ -41,12 +52,12 @@ http {
 
   server {
     listen 443 ssl;
-    server_name www.track.bcc3d.ca;
+    server_name qa.bcc3d.ca;
 
     include nginx-include.conf;
 
     location / {
-      proxy_pass http://localhost:42310;
+      return 302 https://www.qa.bcc3d.ca;
     }
   }
 }
