--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -5,16 +5,33 @@ events {
 
 # Needs templating
 http {
+  include /etc/nginx/mime.types;
+
   # Add your apps here
 
   server {
     listen 80;
-    server_name {{ hostname }};
+    server_name {{ apps.openproject.hostname }};
 
     include apps-nginx-include.conf;
 
     location / {
       proxy_pass http://op-web:8080;
+    }
+  }
+
+  server {
+    listen 80;
+    server_name {{ apps.bcc3d_ca.hostname }};
+
+    include apps-nginx-include.conf;
+
+    location / {
+      root /var/www/bcc3d.ca;
+    }
+
+    location /api/ {
+      proxy_pass http://workpackage-manager/;
     }
   }
 }
