--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -27,6 +27,7 @@ services:
         --no-eff-email
         --expand
         -d track.bcc3d.ca
-        -d qa.track.bcc3d.ca
-        -d www.track.bcc3d.ca
+        -d www.bcc3d.ca
+        -d track.qa.bcc3d.ca
+        -d www.qa.bcc3d.ca
     network_mode: host
