added bcc3d.com support

--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -28,6 +28,8 @@ services:
         --expand
         -d track.bcc3d.ca
         -d www.bcc3d.ca
+        -d bcc3d.com
+        -d www.bcc3d.com
         -d track.qa.bcc3d.ca
         -d www.qa.bcc3d.ca
     network_mode: host
