patch to get things working

--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -19,7 +19,18 @@ http {
 
   server {
     listen 443 ssl;
-    server_name *.bcc3d.ca;
+    server_name track.bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      proxy_pass http://localhost:8080;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name www.bcc3d.ca;
 
     include nginx-include.conf;
 
@@ -41,7 +52,18 @@ http {
   
   server {
     listen 443 ssl;
-    server_name *.qa.bcc3d.ca;
+    server_name www.qa.bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      proxy_pass http://localhost:42310;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name track.qa.bcc3d.ca;
 
     include nginx-include.conf;
 
