--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -49,6 +49,17 @@ http {
       return 302 https://www.bcc3d.ca;
     }
   }
+
+  server {
+    listen 443 ssl;
+    server_name join.bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      return 302 https://join.slack.com/t/bccovid-19/shared_invite/zt-cz01ettu-XZs6dWzob92pDKfFyCusag;
+    }
+  }
   
   server {
     listen 443 ssl;
