--- a/apps/workpackage-manager/Dockerfile
+++ b/apps/workpackage-manager/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7.7
 COPY ./requirements.txt /requirements.txt
 RUN pip install --no-cache-dir -r /requirements.txt
-COPY ./src /app
+COPY ./wpm /app/wpm
 WORKDIR /app
-CMD ["python", "-m", "track.wpm.app"]
+CMD ["python", "-m", "wpm.app"]
