Added Rain City games logo

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -7,6 +7,9 @@
 - name: Pacific Bindery Services
   img: /assets/img/sponsors/pbs-white.png
   url: https://pacificbindery.com/
+- name: Rain City Games
+  img: /assets/img/sponsors/raincity-white.png
+  url: https://www.raincity.games/
 - name: R&M Trade Laminating Ltd.
   img: /assets/img/sponsors/rm-white.png
   url: http://www.rmlaminating.com/
