--- a/templates/config/workpackage-manager.yml
+++ b/templates/config/workpackage-manager.yml
@@ -2,16 +2,19 @@
 fields:
   batched:
     - name: Face Shield Frame
-      open_project_key: customField7
+      openproject_key: customField7
       batch_size: 10
     - name: Visors
-      open_project_key: customField8
+      openproject_key: customField8
       batch_size: 10
     - name: Ear Savers
-      open_project_key: customField9
+      openproject_key: customField9
       batch_size: 10
 
 server:
   port: 80
 
-openProjectUrl: http://op-web:8080
+openproject:
+  url: http://op-web:8080
+  username: {{ openprojectApi.username }}
+  password: {{ openprojectApi.password }}
