--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -30,8 +30,8 @@ http {
       root /var/www/bcc3d.ca;
     }
 
-    location /api/ {
-      proxy_pass http://workpackage-manager/;
+    location /api/v1/ {
+      proxy_pass http://workpackage-manager/api/v1/;
     }
   }
 }
