--- a/templates/config/apps-nginx.conf
+++ b/templates/config/apps-nginx.conf
@@ -33,5 +33,13 @@ http {
     location /api/v1/ {
       proxy_pass http://workpackage-manager/api/v1/;
     }
+
+    # Turns out that flasgger ignores docs url so I have to hardcode these two special endpoints
+    location /flasgger_static/ {
+      proxy_pass http://workpackage-manager/flasgger_static/;
+    }
+    location /apispec_1.json {
+      proxy_pass http://workpackage-manager/apispec_1.json;
+    }
   }
 }
