I always forget config changes

--- a/templates/config/workpackage-manager.yml
+++ b/templates/config/workpackage-manager.yml
@@ -19,3 +19,4 @@ openproject:
   url: {{ scheme }}://{{ apps.openproject.hostname }}
   username: {{ openprojectApi.username }}
   password: {{ openprojectApi.password }}
+  apikey: {{ openprojectApi.apikey }}
