--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -9,10 +9,13 @@
   url: https://pacificbindery.com/
 - name: Rain City Games
   img: /assets/img/sponsors/raincity-white.png
-  url: https://www.raincity.games/
+  url: https://www.raincity.games/service/supporting-the-bc-covid-19-3d-printing-group/
 - name: R&M Trade Laminating Ltd.
   img: /assets/img/sponsors/rm-white.png
   url: http://www.rmlaminating.com/
 - name: Staples
   img: /assets/img/sponsors/staples-white.png
   url: https://www.staples.ca
+- name: Coho Commissary Inc.
+  img: /assets/img/sponsors/coho-commissary-white.png
+  url: https://www.cohocommissary.com/
