--- a/example-config.yml
+++ b/example-config.yml
@@ -1,10 +1,4 @@
 ---
-apps:
-  openproject:
-    hostname: track.local.bcc3d.ca
-  bcc3d_ca:
-    hostname: www.local.bcc3d.ca
-
 scheme: http
 proxyPort: 80
 
@@ -13,3 +7,16 @@ openprojectApi:
   username:
   password:
   apikey:
+
+apps:
+  openproject:
+    hostname: track.local.bcc3d.ca
+  bcc3d_ca:
+    hostname: www.local.bcc3d.ca
+
+
+# Mostly don't worry about the settings below here
+scripts:
+  openproject:
+    structureTables:
+      - 
