Added sponsor logos for Cypress Solutions and Bungobox

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -19,3 +19,9 @@
 - name: Coho Commissary Inc.
   img: /assets/img/sponsors/coho-commissary-white.png
   url: https://www.cohocommissary.com/
+- name: Cypress Solutions
+  img: /assets/img/sponsors/cypress-solutions-white.png
+  url: https://www.cypress.bc.ca/
+- name: BungoBox
+  img: /assets/img/sponsors/bungobox-white.png
+  url: https://bungobox.ca/
