Added Vancouver hack space sponsor logo

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -25,3 +25,6 @@
 - name: BungoBox
   img: /assets/img/sponsors/bungobox-white.png
   url: https://bungobox.ca/
+- name: Vancouver Hack Space
+  img: /assets/img/sponsors/vancouver-hack-space-white.png
+  url: https://vanhack.ca/wp/
