Update sponsor logos and links (#11)
* Upload Coho sponsor logo and update raincity link

* Added sponsor logos for Cypress Solutions and Bungobox

* Added Vancouver hack space sponsor logo

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -9,10 +9,22 @@
   url: https://pacificbindery.com/
 - name: Rain City Games
   img: /assets/img/sponsors/raincity-white.png
-  url: https://www.raincity.games/
+  url: https://www.raincity.games/service/supporting-the-bc-covid-19-3d-printing-group/
 - name: R&M Trade Laminating Ltd.
   img: /assets/img/sponsors/rm-white.png
   url: http://www.rmlaminating.com/
 - name: Staples
   img: /assets/img/sponsors/staples-white.png
   url: https://www.staples.ca
+- name: Coho Commissary Inc.
+  img: /assets/img/sponsors/coho-commissary-white.png
+  url: https://www.cohocommissary.com/
+- name: Cypress Solutions
+  img: /assets/img/sponsors/cypress-solutions-white.png
+  url: https://www.cypress.bc.ca/
+- name: BungoBox
+  img: /assets/img/sponsors/bungobox-white.png
+  url: https://bungobox.ca/
+- name: Vancouver Hack Space
+  img: /assets/img/sponsors/vancouver-hack-space-white.png
+  url: https://vanhack.ca/wp/
