--- a/apps/templating/docker-compose.yml
+++ b/apps/templating/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   templating:
     build: .
     volumes:
+      - ../../defaults.yml:/app/defaults.yml
       - ../../config.yml:/app/config.yml
       - ../../templates:/app/templates
       - ../..:/app/build
