Added redirects for GoFundMe

--- a/apps/ssl/docker-compose.yml
+++ b/apps/ssl/docker-compose.yml
@@ -34,4 +34,5 @@ services:
         -d track.qa.bcc3d.ca
         -d www.qa.bcc3d.ca
         -d join.bcc3d.ca
+        -d gofundme.bcc3d.ca
     network_mode: host
