--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -60,12 +60,27 @@ http {
       return 302 https://join.slack.com/t/bccovid-19/shared_invite/zt-cz01ettu-XZs6dWzob92pDKfFyCusag;
     }
   }
+
+  server {
+    listen 443 ssl;
+    server_name gofundme.bcc3d.ca;
+
+    include nginx-include.conf;
+
+    location / {
+      return 302 https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers;
+    }
+  }
   
   server {
     listen 443 ssl;
     server_name www.qa.bcc3d.ca;
 
     include nginx-include.conf;
+
+    location /gofundme {
+      return 302 https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers;
+    }
 
     location / {
       proxy_pass http://localhost:42310;
