Added /gofundme redirect to bcc3d.ca live

--- a/apps/ssl/nginx.conf
+++ b/apps/ssl/nginx.conf
@@ -34,6 +34,10 @@ http {
 
     include nginx-include.conf;
 
+    location /gofundme {
+      return 302 https://www.gofundme.com/f/3d-printed-face-shields-and-ear-savers;
+    }
+
     location / {
       proxy_pass http://localhost:8080;
     }
