Set-up donations page placeholder

--- a/apps/bcc3d.ca/_data/cards.yml
+++ b/apps/bcc3d.ca/_data/cards.yml
@@ -23,5 +23,5 @@
     We are in urgent need of <b>plexiglass</b>, <b>laminating sheets</b>, <b>PET-G sheets</b>,
     <b>laser printer overhead transparencies</b> and other materials for use in production.
     Our logistics team would love to hear from you ASAP if you can help.
-  cta: Contact Us
-  url: /contact/
+  cta: Donate
+  url: /donations/
