--- a/apps/bcc3d.ca/_data/navigation.yml
+++ b/apps/bcc3d.ca/_data/navigation.yml
@@ -18,10 +18,13 @@
   link: /volunteers/
   highlight: false
 
+- name: Donations
+  link: /donations/
+  highlight: false
+
 - name: Request Equipment
   link: /request/
   highlight: true
-
 # - name: Blog
 #   link: /blog/
 #   highlight: false
