Updated donations links and added donations.html content

--- a/apps/bcc3d.ca/_data/navigation.yml
+++ b/apps/bcc3d.ca/_data/navigation.yml
@@ -22,6 +22,10 @@
   link: /donations/
   highlight: false
 
+- name: Contact Us
+  link: /contact/
+  highlight: false
+
 - name: Request Equipment
   link: /request/
   highlight: true
