--- a/defaults.yml
+++ b/defaults.yml
@@ -11,9 +11,11 @@ openproject:
     - custom_fields_types
     - custom_options
     - custom_values
+    - enabled_modules
     - enterprise_tokens
     - grid_widgets
     - grids
+    - menu_items
     - project_statuses
     - projects
     - projects_types
@@ -24,4 +26,5 @@ openproject:
     - types
     - webhooks_events
     - webhooks_webhooks
+    - wikis
     - workflows
