Added Routific sponsor logo

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -28,3 +28,6 @@
 - name: Vancouver Hack Space
   img: /assets/img/sponsors/vancouver-hack-space-white.png
   url: https://vanhack.ca/wp/
+- name: Routific
+  img: /assets/img/sponsors/routific-white.png
+  url: https://routific.com/
