Updated donations list rendering

--- a/apps/bcc3d.ca/_data/donors.yml
+++ b/apps/bcc3d.ca/_data/donors.yml
@@ -1,6 +1,6 @@
-- name: Jone Doe
-  amount: $400.00
-  date: April 5th, 2020
-- name: Jane Doe
-  amount: $400.00
-  date: April 5th, 2020
+- name: Rain City Games
+  amount: $950.34
+  date: "April 25th, 2020"
+- name: LNG Studios (Leon Ng)
+  amount: $5000.00
+  date: April 20th, 2020
