Added Linus Tech Tips sponsor logo

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -31,3 +31,6 @@
 - name: Routific
   img: /assets/img/sponsors/routific-white.png
   url: https://routific.com/
+- name: Linus Tech Tips
+  img: /assets/img/sponsors/linus-tech-tips-white.png
+  url: https://www.youtube.com/user/LinusTechTips
