Update donors list

--- a/apps/bcc3d.ca/_data/donors.yml
+++ b/apps/bcc3d.ca/_data/donors.yml
@@ -1,3 +1,9 @@
+- name: Andrea Robertson
+  amount: $598.35
+  date: "May 1st, 2020"
+- name: Cleopatra Stamatio
+  amount: $50.00
+  date: "April 30th, 2020"
 - name: Rain City Games
   amount: $950.34
   date: "April 25th, 2020"
