Update donors list

--- a/apps/bcc3d.ca/_data/donors.yml
+++ b/apps/bcc3d.ca/_data/donors.yml
@@ -1,6 +1,15 @@
+- name: Anonymous
+  amount: $150.00
+  date: "May 2nd, 2020"
+- name: Andrea Robertson
+  amount: $598.35
+  date: "May 1st, 2020"
+- name: Cleopatra Stamatio
+  amount: $50.00
+  date: "April 30th, 2020"
 - name: Rain City Games
   amount: $950.34
   date: "April 25th, 2020"
 - name: LNG Studios (Leon Ng)
   amount: $5000.00
-  date: April 20th, 2020
+  date: "April 20th, 2020"
