Added jekyll_environment to templating system
Allows us to set JEKYLL_ENV to production so our Google Analytics script can run

--- a/templates/apps/bcc3d.ca/build.docker-compose.yml
+++ b/templates/apps/bcc3d.ca/build.docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
       - .:/build
     environment:
-      - JEKYLL_ENV=development
+      - JEKYLL_ENV={{ apps.bcc3d_ca.jekyll_environment|default('development', true) }}
