Refactored approach for setting JEKYLL_ENV
As per Will's suggestions on https://github.com/bccovid-19/track/pull/35

--- a/templates/apps/bcc3d.ca/build.docker-compose.yml
+++ b/templates/apps/bcc3d.ca/build.docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
       - .:/build
     environment:
-      - JEKYLL_ENV={{ apps.bcc3d_ca.jekyll_environment|default('development', true) }}
+      - JEKYLL_ENV={{ 'production' if apps.bcc3d_ca.production else 'development'}}
