Update wording on donors/sponsors card in home page

--- a/apps/bcc3d.ca/_data/cards.yml
+++ b/apps/bcc3d.ca/_data/cards.yml
@@ -20,8 +20,8 @@
 
 - title: Donors / Sponsors
   body: >-
-    We are in urgent need of <b>materials</b> and <b>financial support</b> to allow us to ramp up our production levels.
-    If you are able to supply clear plastics (<b>PET-G</b>, <b>laminating sheets</b>, or other) or <b>3D printing materials</b>,
+    We are in urgent need of <b>materials</b>, <b>financial support</b>, and <b>other services</b> to allow us to ramp up our production levels.
+    If you are able to supply clear plastics (<b>PET-G</b>, <b>laminating sheets</b>, or other), <b>3D printing materials</b>, or <b>other services</b>,
     our logistics team would love to hear from you. Financial support is also graciously accepted on our donations page.
   cta: Donate
   url: /donations/
