Updated website wording
https://trello.com/c/TNwTg5UQ/85-website-wording-changes

--- a/apps/bcc3d.ca/_data/cards.yml
+++ b/apps/bcc3d.ca/_data/cards.yml
@@ -1,4 +1,4 @@
-- title: Healthcare Providers
+- title: Request Equipment
   img: /assets/img/card-hcp.jpg
   body: >-
     Please register your request for supplies on behalf of your
