Added DLA Piper to sponsor list
Included original logo and white version

--- a/apps/bcc3d.ca/_data/sponsors.yml
+++ b/apps/bcc3d.ca/_data/sponsors.yml
@@ -34,3 +34,6 @@
 - name: Linus Tech Tips
   img: /assets/img/sponsors/linus-tech-tips-white.png
   url: https://www.youtube.com/user/LinusTechTips
+- name: DLA Piper
+  img: /assets/img/sponsors/dla-logo-white.png
+  url: https://www.dlapiper.com
